Added javascript functionality

--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@
        <form class="js-form">
         <input autofocus type="text" placeholder="E.g Build a web app" class="js-todo-input"/></form>
     </main>
+    <script src="script.js"></script>
 </body>
 </html>
